Fix port binding and optimize dependencies for Render free plan

--- a/requirements-minimal.txt
+++ b/requirements-minimal.txt
@@ -7,4 +7,5 @@ livekit-plugins-google==1.2.5
 livekit-plugins-deepgram==1.2.5
 livekit-plugins-cartesia==1.2.5
 livekit-plugins-silero==1.2.5
+livekit-plugins-noise-cancellation==0.2.5
 livekit-plugins-turn-detector==1.2.5
