--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ livekit-agents==1.2.5
 livekit-api==1.0.5
 livekit-plugins-google==1.2.5
 livekit-plugins-deepgram==1.2.5
-livekit-plugins-cartesia==1.2.5
+livekit-plugins-elevenlabs==1.2.5
 livekit-plugins-silero==1.2.5
 livekit-plugins-turn-detector==1.2.5
+torch
+torchaudio
